Bug 428561 - Some CPU sensors give wrong information
Summary: Some CPU sensors give wrong information
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Monitor widgets (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-01 13:18 UTC by Patrick Silva
Modified: 2021-05-16 17:03 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (18.12 KB, image/png)
2020-11-01 13:18 UTC, Patrick Silva
Details
new screenshot (21.29 KB, image/png)
2020-11-03 09:35 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-11-01 13:18:20 UTC
Created attachment 132940 [details]
screenshot

SUMMARY
intel i3 3110M is the only cpu of my laptop.
As we can read in the following link, it has 2 cores and 4 threads.

https://ark.intel.com/content/www/us/en/ark/products/65700/intel-core-i3-3110m-processor-3m-cache-2-40-ghz.html

However, system monitor sensors wrongly indicate 2 physical CPUs,
1 CPU core and 1 CPU on my system. See the attached screenshot please.

STEPS TO REPRODUCE
1. add System Monitor Sensor widget to desktop
2. open its settings and click on "Sensors details" section
3. search and add these sensors: number of physical CPUs, number of cores
and number of CPUs
4. click on "Ok" button

EXPECTED RESULT
mentioned system monitor sensors should give correct information

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.76.0
Qt Version: 5.15.0
Comment 1 Justin Zobel 2020-11-02 00:10:51 UTC
Seems to report the exact same details on matter the CPU.

I have the same numbers on my i7-6700.
Comment 2 Bug Janitor Service 2020-11-02 08:54:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/ksysguard/-/merge_requests/52
Comment 3 David Redondo 2020-11-02 12:32:46 UTC
Git commit 3f7f22944b0b33509a96c0e880482102307d55d9 by David Redondo.
Committed on 02/11/2020 at 12:32.
Pushed by davidre into branch 'master'.

Set core count to the correct value

M  +1    -1    plugins/global/cpu/linuxcpuplugin.cpp

https://invent.kde.org/plasma/ksysguard/commit/3f7f22944b0b33509a96c0e880482102307d55d9
Comment 4 Patrick Silva 2020-11-03 09:35:38 UTC
Created attachment 132982 [details]
new screenshot

I have different values after this commit, but they are wrong yet.
Comment 5 Patrick Silva 2021-05-16 17:03:05 UTC
"Number of physical CPUs" sensor no longer exists on Plasma 5.22 beta.
"Number of Cores" and "Number of CPUs" give correct values. :)