Set core count to the correct value

BUG:428561